--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.zkatemor.kudago">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -10,11 +11,6 @@
     <uses-feature
             android:glEsVersion="0x00020000"
             android:required="true"/>
-
-    <permission
-            android:name="com.example.permission.MAPS_RECEIVE"
-            android:protectionLevel="signature"/>
-    <uses-permission android:name="com.example.permission.MAPS_RECEIVE"/>
 
     <application
             android:allowBackup="true"
@@ -34,6 +30,15 @@
         <activity android:name=".activities.EventActivity"/>
 
         <activity android:name=".activities.CitiesActivity"/>
+
+        <meta-data
+                android:name="com.google.android.gms.version"
+                android:value="@integer/google_play_services_version" />
+
+        <meta-data
+                android:name="com.google.android.maps.v2.API_KEY"
+                android:value="@string/map_api_key" />
+
     </application>
 
 </manifest>
