--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
 
     implementation 'com.github.bumptech.glide:glide:4.1.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.joooonho:selectableroundedimageview:1.0.1'
 }
