--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,16 +20,16 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
-        <activity android:name=".activities.MainActivity">
+        <activity android:name="com.zkatemor.kudago.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.EventActivity"/>
+        <activity android:name="com.zkatemor.kudago.activities.EventActivity"/>
 
-        <activity android:name=".activities.CitiesActivity"/>
+        <activity android:name="com.zkatemor.kudago.activities.CitiesActivity"/>
 
         <meta-data
                 android:name="com.google.android.gms.version"
