--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
             android:required="true"/>
 
     <application
+            android:name=".app.App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher_round"
             android:label="@string/app_name"
