--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,13 @@ android {
     }
 }
 
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+}
+
 kapt {
     generateStubs = true
 }
@@ -57,4 +64,7 @@ dependencies {
 
     kapt 'com.google.dagger:dagger-compiler:2.22.1'
     implementation 'com.google.dagger:dagger:2.22.1'
+
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
 }
